==> 88099981/omnidirectional/LQ_CH32V103R8T6/lq_ch32v103lib-mw/LQ_CH32V103LIB-MW/User/LQ_MotorServo.c <==
#include "include.h"
#define MOTOR_FREQUENCY    PWM_DUTY_MAX
#define USEDRV8701

void MotorInit(u16 freq)
{
  /*
  GPIO_InitTypeDef  GPIO_InitStructure;
  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOC, ENABLE);
  GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10|GPIO_Pin_11|GPIO_Pin_12|GPIO_Pin_13;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_Init(GPIOC, &GPIO_InitStructure);
  */
  PIN_InitConfig(PC10, GPO, 1,GPIO_Mode_Out_PP);
  PIN_InitConfig(PC11, GPO, 1,GPIO_Mode_Out_PP);
  PIN_InitConfig(PC12, GPO, 1,GPIO_Mode_Out_PP);
  PIN_InitConfig(PC13, GPO, 1,GPIO_Mode_Out_PP);

  PWM_InitConfig(PWM3_CH3_PC8,freq, 100);
  PWM_InitConfig(PWM3_CH4_PC9,freq, 100);
  PWM_InitConfig(PWM3_CH1_PC6,freq, 100);
  PWM_InitConfig(PWM3_CH2_PC7,freq, 100);

  PidInit(&pid1);
  PidInit(&pid2);
  PidInit(&pid3);
  PidInit(&pid4);
  /* PID 参数需要自行调节 */
  pid1.kp = 160;
  pid1.ki = 5;

  pid2.kp = 160;
  pid2.ki = 5;

  pid3.kp = 160;
  pid3.ki = 5;

  pid4.kp = 160;
  pid4.ki = 5;
}

void MotorCtrl4w(int16_t motor1, int16_t motor2,int16_t motor3, int16_t motor4)
{
  //assert(motor1>TIM3_PWM_DUTY_MAX);
  //assert(motor2>TIM3_PWM_DUTY_MAX);
  //assert(motor3>TIM3_PWM_DUTY_MAX);
  //assert(motor4>TIM3_PWM_DUTY_MAX);
  
  if (motor1 > 0)
  {
    PWM_Set_Duty(PWM3_CH3_PC8,motor1);	     //C8
    GPIO_ResetBits(MTGPIO1p);    //C10
  }
  else
  {
    PWM_Set_Duty(PWM3_CH3_PC8,MOTOR_FREQUENCY+motor1);
    GPIO_SetBits(MTGPIO1p);
  }
  
  if (motor2 > 0)
  {
    PWM_Set_Duty(PWM3_CH1_PC6,motor2);	    //C6
    GPIO_ResetBits(MTGPIO2p);   //C11	
  }
  else
  {
    PWM_Set_Duty(PWM3_CH1_PC6,MOTOR_FREQUENCY+motor2);
    GPIO_SetBits(MTGPIO2p);
  }
  
  if (motor3 > 0)
  {
    PWM_Set_Duty(PWM3_CH4_PC9,motor3);	  //C9
    GPIO_ResetBits(MTGPIO3p); //C12	
  }
  else
  {
    PWM_Set_Duty(PWM3_CH4_PC9,MOTOR_FREQUENCY+motor3);
    GPIO_SetBits(MTGPIO3p);
  }
  
  if (motor4 > 0)
  {
    PWM_Set_Duty(PWM3_CH2_PC7,motor4);	 //C7
    GPIO_ResetBits(MTGPIO4p);//C13	
  }
  else
  {
    PWM_Set_Duty(PWM3_CH2_PC7,MOTOR_FREQUENCY+motor4);
    GPIO_SetBits(MTGPIO4p);
  }
}

void MotorCtrl(int16_t motor1, int16_t motor2)
{
  //assert(motor1>TIM3_PWM_DUTY_MAX);
  //assert(motor2>TIM3_PWM_DUTY_MAX);
  if (motor1 > 0)
  {
    PWM_Set_Duty(PWM3_CH4_PC9,motor1);	  //C9
    GPIO_ResetBits(MTGPIO3p); //C12	
  }
  else
  {
    PWM_Set_Duty(PWM3_CH4_PC9,MOTOR_FREQUENCY+motor1);
    GPIO_SetBits(MTGPIO3p);
  }
  
  if (motor2 > 0)
  {
    PWM_Set_Duty(PWM3_CH2_PC7,motor2);	 //C7
    GPIO_ResetBits(MTGPIO4p);//C13	
  }
  else
  {
    PWM_Set_Duty(PWM3_CH2_PC7,MOTOR_FREQUENCY+motor2);
    GPIO_SetBits(MTGPIO4p);
  }
}

void MotorCtrl4w(int16_t motor1, int16_t motor2,int16_t motor3, int16_t motor4)
{
  //assert(motor1>TIM3_PWM_DUTY_MAX);
  //assert(motor2>TIM3_PWM_DUTY_MAX);
  //assert(motor3>TIM3_PWM_DUTY_MAX);
  //assert(motor4>TIM3_PWM_DUTY_MAX);
  if (motor1 > 0)
  {
    PWM_Set_Duty(PWM3_CH3_PC8,motor1);	     //C8
    GPIO_ResetBits(MTGPIO1p);    //C10
  }
  else
  {
    PWM_Set_Duty(PWM3_CH3_PC8,0-motor1);
    GPIO_SetBits(MTGPIO1p);
  }
  
  if (motor2 > 0)
  {
    PWM_Set_Duty(PWM3_CH1_PC6,motor2);	    //C6
    GPIO_ResetBits(MTGPIO2p);   //C11	
  }
  else
  {
    PWM_Set_Duty(PWM3_CH1_PC6,0-motor2);
    GPIO_SetBits(MTGPIO2p);
  }
  
  if (motor3 > 0)
  {
    PWM_Set_Duty(PWM3_CH4_PC9,motor3);	  //C9
    GPIO_ResetBits(MTGPIO3p); //C12	
  }
  else
  {
    PWM_Set_Duty(PWM3_CH4_PC9,0-motor3);
    GPIO_SetBits(MTGPIO3p);
  }
  
  if (motor4 > 0)
  {
    PWM_Set_Duty(PWM3_CH2_PC7,motor4);	 //C7
    GPIO_ResetBits(MTGPIO4p);//C13	
  }
  else
  {
    PWM_Set_Duty(PWM3_CH2_PC7,0-motor4);
    GPIO_SetBits(MTGPIO4p);
  }
}

void MotorCtrl(int16_t motor1, int16_t motor2)
{
  //assert(motor1>TIM3_PWM_DUTY_MAX);
  //assert(motor2>TIM3_PWM_DUTY_MAX);
  
  if (motor1 > 0)
  {
    PWM_Set_Duty(PWM3_CH4_PC9,motor1);	  //C9
    GPIO_ResetBits(MTGPIO3p); //C12	
  }
  else
  {
    PWM_Set_Duty(PWM3_CH4_PC9,0-motor1);
    GPIO_SetBits(MTGPIO3p);
  }
  
  if (motor2 > 0)
  {
    PWM_Set_Duty(PWM3_CH2_PC7,motor2);	 //C7
    GPIO_ResetBits(MTGPIO4p);//C13	
  }
  else
  {
    PWM_Set_Duty(PWM3_CH2_PC7,0-motor2);
    GPIO_SetBits(MTGPIO4p);
  }
}

void TestMotor (void)
{
  int16_t duty = 1500;
  char txt[16];
  
  TFTSPI_Init(1);        //LCD初始化  0:横屏  1：竖屏
  TFTSPI_CLS(u16BLUE);          //清屏
  TFTSPI_P8X16Str(2, 0, "LQ Motor Test", u16RED, u16BLUE);
  MotorInit(12500);
  while (1)
  {
    if (KEY_Read(KEY0) == 0)      //按下KEY0键，占空比减小
    {
      if (duty > -PWM_DUTY_MAX)
        duty -= 100;
    }
    if (KEY_Read(KEY2) == 0)      //按下KEY2键，占空比加大
    {
      if (duty < PWM_DUTY_MAX) //满占空比为10000
        duty += 100;
    }
    if (KEY_Read(KEY1) == 0)      //按下KEY1键，占空比中值
    {
      duty = 1500;
    }
    
    //MotorCtrl(duty, duty);
    MotorCtrl4w(duty, duty, duty, duty);
    
    sprintf(txt, "PWM: %05d;", duty);
    TFTSPI_P8X16Str(0, 5, txt, u16WHITE, u16BLACK);       //字符串显示
    //UART_PutStr(UART_1,txt);
    
    LED_Ctrl(LED0, RVS);       //电平翻转,LED闪烁
    delayms(200);              //延时等待
  }
}

void ServoInit(u16 freq)
{
                              //电机1用的是C6 C8;电机2用的是C7 C9
    PWM_InitConfig(PWM3_CH1_PC6, 50, 1500);  //舵机默认用的是C6口，TIM3定时器
                              //如果电机和舵机同时使用，避开冲突
}

void ServoCtrl (uint16_t duty)
{
  /*
  if (duty >= Servo_Left_Max)                  //限制幅值
    duty = Servo_Left_Max;
  else if (duty <= Servo_Right_Min)            //限制幅值
    duty = Servo_Right_Min;
  */
  PWM_Set_Duty(PWM3_CH1_PC6,duty);//C6;
}
